--- a/loginscreen/Base.lproj/Main.storyboard
+++ b/loginscreen/Base.lproj/Main.storyboard
@@ -53,22 +53,20 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sa8-YF-0tw">
-                                <rect key="frame" x="158" y="405" width="58" height="41"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <state key="normal" title="Login">
-                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="cuntarroo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4EK-Sb-94o">
+                                <rect key="frame" x="68" y="507" width="148" height="74"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.91842378840000005" green="1" blue="0.95693468849999996" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="tintColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="2fc-Gd-Css" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="18.5" id="G4L-N1-UAS"/>
                             <constraint firstItem="2fc-Gd-Css" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ug9-2c-Agb"/>
-                            <constraint firstItem="sa8-YF-0tw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iqg-5E-K5i"/>
                             <constraint firstItem="SLq-GX-zaQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pzX-u0-br8"/>
-                            <constraint firstItem="sa8-YF-0tw" firstAttribute="top" secondItem="2fc-Gd-Css" secondAttribute="bottom" constant="22.333333333333314" id="qEa-hy-89n"/>
                             <constraint firstItem="SLq-GX-zaQ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-50.5" id="yoX-He-kTK"/>
                         </constraints>
                     </view>
