--- a/loginscreen/Base.lproj/Main.storyboard
+++ b/loginscreen/Base.lproj/Main.storyboard
@@ -53,6 +53,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vcg-Ee-Hsz">
                                         <rect key="frame" x="137" y="0.0" width="117" height="30"/>
                                         <state key="normal" title="Forgot password"/>
+                                        <connections>
+                                            <segue destination="1Af-cz-KRq" kind="show" id="2pR-xM-PrX"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g1s-VK-Ha7">
                                         <rect key="frame" x="274" y="0.0" width="117" height="30"/>
@@ -84,6 +87,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="476" y="138.98050974512745"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="K1Z-yX-FwZ">
+            <objects>
+                <viewController id="1Af-cz-KRq" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oU6-bD-Avu"/>
+                        <viewControllerLayoutGuide type="bottom" id="LaV-jl-uPJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hmU-Yi-dhv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sVi-c1-ocQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1348" y="194"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="BQY-8f-Qiz">
